FMS Client - Fix "navigation items could not be clicked" bug

--- a/fms-gui-client/src/index.html
+++ b/fms-gui-client/src/index.html
@@ -4,10 +4,14 @@
   <title>FMS Web</title>
   <base href="/">
 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <!-- Responsive viewport meta tag -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- TODO: Use the open graph protocol -->
 </head>
 <body>
   <app-root></app-root>
