FMS-C01 Replace mat-grid-list with simple CSS grid

--- a/fms-gui-client/src/index.html
+++ b/fms-gui-client/src/index.html
@@ -4,7 +4,10 @@
   <title>FMS Web</title>
   <base href="/">
 
+  <!-- Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
