FMS-C1: Add controls and flags to status panel, add bootstrap

--- a/fms-gui-client/src/index.html
+++ b/fms-gui-client/src/index.html
@@ -11,7 +11,7 @@
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <!-- Responsive viewport meta tag -->
+  <!-- Responsive viewport meta tag for mobile-first -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- TODO: Use the open graph protocol -->
