FMS-C15 Store Roboto font locally, provide favicon, update Angular to version 8

--- a/fms-gui-client/src/index.html
+++ b/fms-gui-client/src/index.html
@@ -1,18 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>FMS Web</title>
   <base href="/">
 
-  <!-- Icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <!-- Responsive viewport meta tag for mobile-first -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="./assets/icons/spaceteam.favicon.png">
 
   <!-- TODO: Use the open graph protocol -->
 </head>
